# hse-de-course-project

./: .gitignore  .pre-commit-config.yaml  README.md  main.ddl.sql  pyproject.toml
dags/: .gitignore  main.py  test.py
dags/modules/: settings.py
dags/modules/data/: build_report.py  dim_hist_load.py  dim_load.py  fact_load.py  source.py  staging_load.py
dags/modules/db/: utils.py
dags/modules/models/: __init__.py  account.py  base.py  blacklist.py  card.py  client.py  report.py  terminal.py  transaction.py
notebooks/: db.ipynb  eda.ipynb
scripts/: snippet_pg.py
